--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "next": "10.x",
+    "prettier": "^2.3.1",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-use": "^17.2.4",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
     "typescript": "^4.3.2"
   }
 }
